--- a/diagrams-haddock.cabal
+++ b/diagrams-haddock.cabal
@@ -36,6 +36,7 @@ Test-suite diagrams-haddock-tests
                        test-framework >= 0.8 && < 0.9,
                        test-framework-quickcheck2 >= 0.3 && < 0.4,
                        parsec >= 3,
+                       haskell-src-exts >= 1.13 && < 1.14,
                        diagrams-haddock
   hs-source-dirs:      test
   default-language:    Haskell2010
