--- a/diagrams-haddock.cabal
+++ b/diagrams-haddock.cabal
@@ -24,6 +24,7 @@ library
   -- other-modules:       
   build-depends:       base >= 4.4 && < 4.7,
                        containers >= 0.4 && < 0.6,
+                       split >= 0.2 && < 0.3,
                        parsec >= 3,
                        haskell-src-exts >= 1.13 && < 1.14
   hs-source-dirs:      src
