--- a/diagrams-haddock.cabal
+++ b/diagrams-haddock.cabal
@@ -33,7 +33,8 @@ library
 Test-suite diagrams-haddock-tests
   type:                exitcode-stdio-1.0
   main-is:             Tests.hs
-  build-depends:       base, 
+  build-depends:       base,
+                       containers >= 0.4 && < 0.6,
                        QuickCheck >= 2.4 && < 2.6,
                        test-framework >= 0.8 && < 0.9,
                        test-framework-quickcheck2 >= 0.3 && < 0.4,
