--- a/diagrams-haddock.cabal
+++ b/diagrams-haddock.cabal
@@ -23,10 +23,18 @@ library
   exposed-modules:     Diagrams.Haddock
   -- other-modules:       
   build-depends:       base >= 4.4 && < 4.7,
+                       filepath,
+                       directory,
                        containers >= 0.4 && < 0.6,
                        split >= 0.2 && < 0.3,
+                       bytestring >= 0.10 && < 0.11,
                        parsec >= 3,
-                       haskell-src-exts >= 1.13 && < 1.14
+                       haskell-src-exts >= 1.13 && < 1.14,
+                       blaze-svg >= 0.3 && < 0.4,
+                       diagrams-builder >= 0.3 && < 0.4,
+                       diagrams-lib >= 0.6 && < 0.7,
+                       diagrams-svg >= 0.6 && < 0.7,
+                       vector-space >= 0.8 && < 0.9
   hs-source-dirs:      src
   default-language:    Haskell2010
 
