--- a/diagrams-haddock.cabal
+++ b/diagrams-haddock.cabal
@@ -28,6 +28,7 @@ library
                        containers >= 0.4 && < 0.6,
                        split >= 0.2 && < 0.3,
                        bytestring >= 0.9 && < 0.11,
+                       strict >= 0.3 && < 0.4,
                        parsec >= 3,
                        haskell-src-exts >= 1.13 && < 1.14,
                        blaze-svg >= 0.3 && < 0.4,
