--- a/diagrams-haddock.cabal
+++ b/diagrams-haddock.cabal
@@ -12,7 +12,7 @@ author:              Brent Yorgey
 maintainer:          diagrams-discuss@googlegroups.com
 -- copyright:           
 category:            Graphics
-build-type:          Simple
+build-type:          Custom
 cabal-version:       >=1.10
 
 Source-repository head
