--- a/diagrams-haddock.cabal
+++ b/diagrams-haddock.cabal
@@ -35,7 +35,8 @@ library
                        diagrams-builder >= 0.3 && < 0.4,
                        diagrams-lib >= 0.6 && < 0.7,
                        diagrams-svg >= 0.6 && < 0.7,
-                       vector-space >= 0.8 && < 0.9
+                       vector-space >= 0.8 && < 0.9,
+                       lens >= 3.8 && < 3.9
   hs-source-dirs:      src
   default-language:    Haskell2010
 
