--- a/diagrams-haddock.cabal
+++ b/diagrams-haddock.cabal
@@ -38,6 +38,16 @@ library
                        vector-space >= 0.8 && < 0.9,
                        lens >= 3.8 && < 3.9
   hs-source-dirs:      src
+  other-extensions:    TemplateHaskell
+  default-language:    Haskell2010
+
+Executable diagrams-haddock
+  main-is:             diagrams-haddock.hs
+  build-depends:       base,
+                       directory,
+                       diagrams-haddock,
+                       cmdargs >= 0.8 && < 0.11
+  hs-source-dirs:      tools
   default-language:    Haskell2010
 
 Test-suite diagrams-haddock-tests
