--- a/diagrams-haddock.cabal
+++ b/diagrams-haddock.cabal
@@ -37,7 +37,8 @@ library
                        diagrams-lib >= 0.6 && < 0.7,
                        diagrams-svg >= 0.6 && < 0.7,
                        vector-space >= 0.8 && < 0.9,
-                       lens >= 3.8 && < 3.9
+                       lens >= 3.8 && < 3.9,
+                       cpphs >= 1.16
   hs-source-dirs:      src
   other-extensions:    TemplateHaskell
   default-language:    Haskell2010
