--- a/diagrams-haddock.cabal
+++ b/diagrams-haddock.cabal
@@ -56,7 +56,8 @@ Executable diagrams-haddock
                        filepath,
                        diagrams-haddock,
                        cmdargs >= 0.8 && < 0.11,
-                       Cabal >= 1.14 && < 1.18
+                       Cabal >= 1.14 && < 1.18,
+                       cpphs >= 1.15
   hs-source-dirs:      tools
   default-language:    Haskell2010
 
