--- a/diagrams-haddock.cabal
+++ b/diagrams-haddock.cabal
@@ -44,7 +44,8 @@ library
                        vector-space >= 0.8 && < 0.9,
                        lens >= 3.8 && < 3.9,
                        cpphs >= 1.15,
-                       cautious-file >= 1.0 && < 1.1
+                       cautious-file >= 1.0 && < 1.1,
+                       text >= 0.11 && < 0.12
   hs-source-dirs:      src
   other-extensions:    TemplateHaskell
   default-language:    Haskell2010
