--- a/diagrams-haddock.cabal
+++ b/diagrams-haddock.cabal
@@ -44,7 +44,8 @@ library
                        vector-space >= 0.8 && < 0.9,
                        lens >= 3.8 && < 3.9,
                        cpphs >= 1.15,
-                       cautious-file >= 1.0 && < 1.1
+                       cautious-file >= 1.0 && < 1.1,
+                       uniplate >= 1.6 && < 1.7
   hs-source-dirs:      src
   other-extensions:    TemplateHaskell
   default-language:    Haskell2010
@@ -71,6 +72,7 @@ Test-suite diagrams-haddock-tests
                        test-framework-quickcheck2 >= 0.3 && < 0.4,
                        parsec >= 3,
                        haskell-src-exts >= 1.13 && < 1.14,
+                       lens >= 3.8 && < 3.9,
                        diagrams-haddock
   hs-source-dirs:      test
   default-language:    Haskell2010
