--- a/diagrams-haddock.cabal
+++ b/diagrams-haddock.cabal
@@ -51,7 +51,8 @@ library
                        cpphs >= 1.15,
                        cautious-file >= 1.0 && < 1.1,
                        uniplate >= 1.6 && < 1.7,
-                       text >= 0.11 && < 0.12
+                       text >= 0.11 && < 0.12,
+                       base64-bytestring >= 1 && < 1.1
   hs-source-dirs:      src
   other-extensions:    TemplateHaskell
   default-language:    Haskell2010
