--- a/diagrams-haddock.cabal
+++ b/diagrams-haddock.cabal
@@ -62,12 +62,15 @@ Executable diagrams-haddock
   build-depends:       base,
                        directory,
                        filepath,
+                       stm,
+                       async,
                        diagrams-haddock,
                        cmdargs >= 0.8 && < 0.11,
                        Cabal >= 1.14 && < 1.18,
                        cpphs >= 1.15
   hs-source-dirs:      tools
   default-language:    Haskell2010
+  ghc-options:         -with-rtsopts=-N -threaded
 
 Test-suite diagrams-haddock-tests
   type:                exitcode-stdio-1.0
