--- a/diagrams-haddock.cabal
+++ b/diagrams-haddock.cabal
@@ -52,7 +52,8 @@ library
                        cautious-file >= 1.0 && < 1.1,
                        uniplate >= 1.6 && < 1.7,
                        text >= 0.11 && < 0.12,
-                       base64-bytestring >= 1 && < 1.1
+                       base64-bytestring >= 1 && < 1.1,
+                       ansi-terminal >= 0.5 && < 0.7
   hs-source-dirs:      src
   other-extensions:    TemplateHaskell
   default-language:    Haskell2010
