--- a/diagrams-haddock.cabal
+++ b/diagrams-haddock.cabal
@@ -22,9 +22,10 @@ author:              Brent Yorgey
 maintainer:          diagrams-discuss@googlegroups.com
 bug-reports:         https://github.com/diagrams/diagrams-haddock/issues
 category:            Graphics
-build-type:          Custom
+build-type:          Simple
 cabal-version:       >=1.10
 extra-source-files:  README.md, CHANGES.md, diagrams/*.svg
+extra-doc-files:     diagrams/*.svg
 
 Source-repository head
   type: git
