--- a/diagrams-haddock.cabal
+++ b/diagrams-haddock.cabal
@@ -76,9 +76,9 @@ Test-suite diagrams-haddock-tests
   main-is:             Tests.hs
   build-depends:       base,
                        containers >= 0.4 && < 0.6,
-                       QuickCheck >= 2.4 && < 2.7,
-                       test-framework >= 0.8 && < 0.9,
-                       test-framework-quickcheck2 >= 0.3 && < 0.4,
+                       QuickCheck >= 2.4 && < 2.8,
+                       tasty >= 0.8 && < 0.9,
+                       tasty-quickcheck >= 0.8 && < 0.9,
                        parsec >= 3,
                        haskell-src-exts >= 1.14 && < 1.15,
                        lens >= 3.8 && < 4.2,
