--- a/diagrams-haddock.cabal
+++ b/diagrams-haddock.cabal
@@ -42,13 +42,13 @@ library
                        bytestring >= 0.9 && < 0.11,
                        strict >= 0.3 && < 0.4,
                        parsec >= 3,
-                       haskell-src-exts >= 1.14 && < 1.16,
+                       haskell-src-exts >= 1.16 && < 1.17,
                        blaze-svg >= 0.3 && < 0.4,
                        diagrams-builder >= 0.5 && < 0.7,
                        diagrams-lib >= 0.6 && < 1.3,
                        diagrams-svg >= 0.8.0.1 && < 1.2,
-                       vector-space >= 0.8 && < 0.9,
                        lens >= 3.8 && < 4.5,
+                       linear >= 1.10 && < 1.11,
                        cpphs >= 1.15,
                        cautious-file >= 1.0 && < 1.1,
                        uniplate >= 1.6 && < 1.7,
