--- a/diagrams-haddock.cabal
+++ b/diagrams-haddock.cabal
@@ -43,7 +43,7 @@ library
                        strict >= 0.3 && < 0.4,
                        parsec >= 3,
                        haskell-src-exts >= 1.16 && < 1.17,
-                       blaze-svg >= 0.3 && < 0.4,
+                       lucid-svg >= 0.4.0.3 && < 0.5,
                        diagrams-builder >= 0.5 && < 0.7,
                        diagrams-lib >= 0.6 && < 1.3,
                        diagrams-svg >= 0.8.0.1 && < 1.2,
