--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ matrix:
 
 before_install:
   - |
-    if [ $GHCVER = "7.8.4" || $GHCVER eq "7.10.1" ]; then
+    if [ $GHCVER = "7.8.4" ] || [ $GHCVER = "7.10.1" ]; then
       echo "constraints:transformers installed, ghc installed" >> cabal.config
     else
       echo "constraints:ghc installed" >> cabal.config
