--- a/diagrams-haddock.cabal
+++ b/diagrams-haddock.cabal
@@ -45,7 +45,7 @@ library
                        strict >= 0.3 && < 0.4,
                        parsec >= 3,
                        haskell-src-exts >= 1.16 && < 1.18,
-                       lucid-svg >= 0.5 && < 0.7,
+                       svg-builder >= 0.1 && < 0.2,
                        diagrams-builder >= 0.5 && < 0.8,
                        diagrams-lib >= 0.6 && < 1.4,
                        diagrams-svg >= 0.8.0.1 && < 1.5,
