--- a/diagrams-haddock.cabal
+++ b/diagrams-haddock.cabal
@@ -26,7 +26,7 @@ build-type:          Simple
 cabal-version:       >=1.10
 extra-source-files:  README.md, CHANGES.md, diagrams/*.svg
 extra-doc-files:     diagrams/*.svg
-tested-with:         GHC == 7.8.4, GHC == 7.10.1
+tested-with:         GHC == 7.8.4, GHC == 7.10.2, GHC == 8.0.1
 
 Source-repository head
   type: git
