--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,6 @@ language: haskell
 
 env:
   matrix:
-    - GHCVER=7.8.4 CABALVER=1.18
     - GHCVER=7.10.2 CABALVER=1.22
     - GHCVER=8.0.1 CABALVER=1.24
     - GHCVER=head CABALVER=head
@@ -18,7 +17,7 @@ matrix:
 
 before_install:
   - |
-    if [ $GHCVER = "7.8.4" ] || [ $GHCVER = "7.10.1" ]; then
+    if [ $GHCVER = "7.10.1" ]; then
       echo "constraints:transformers installed, ghc installed" >> cabal.config
     else
       echo "constraints:ghc installed" >> cabal.config
