--- a/diagrams-haddock.cabal
+++ b/diagrams-haddock.cabal
@@ -23,7 +23,7 @@ maintainer:          diagrams-discuss@googlegroups.com
 bug-reports:         https://github.com/diagrams/diagrams-haddock/issues
 category:            Graphics
 build-type:          Simple
-cabal-version:       >=1.10
+cabal-version:       1.18
 extra-source-files:  README.md, CHANGES.md, diagrams/*.svg
 extra-doc-files:     diagrams/*.svg
 tested-with:         GHC == 7.10.2, GHC == 8.0.1
