--- a/diagrams-haddock.cabal
+++ b/diagrams-haddock.cabal
@@ -37,6 +37,7 @@ library
   other-modules:       Paths_diagrams_haddock
   build-depends:       base >= 4.4 && < 5.0,
                        filepath,
+                       Cabal,
                        directory,
                        mtl >= 2.0 && < 2.3,
                        containers >= 0.4 && < 0.6,
@@ -54,8 +55,6 @@ library
                        lens,
                        linear,
                        cpphs,
-                       -- -- cautious-file >= 1.0 && < 1.1,
-                       -- -- uniplate >= 1.6 && < 1.7,
                        text >= 0.11 && < 1.3,
                        base64-bytestring >= 1 && < 1.1,
                        ansi-terminal
@@ -63,16 +62,16 @@ library
   other-extensions:    TemplateHaskell
   default-language:    Haskell2010
 
-Executable diagrams-haddock
+Executable diagrams-haddock-svg
   main-is:             diagrams-haddock.hs
   other-modules:       Paths_diagrams_haddock
   build-depends:       base,
-                       directory,
-                       filepath,
-                       diagrams-haddock,
-                       cmdargs,
                        Cabal,
-                       cpphs
+                       cmdargs,
+                       cpphs,
+                       diagrams-haddock,
+                       directory,
+                       filepath
   hs-source-dirs:      tools
   default-language:    Haskell2010
 
