--- a/diagrams-haddock.cabal
+++ b/diagrams-haddock.cabal
@@ -52,7 +52,7 @@ library
                        lens >= 3.8 && < 4.20,
                        linear >= 1.10 && < 1.22,
                        cpphs >= 1.15,
-                       cautious-file >= 1.0 && < 1.1,
+                       unliftio >= 0.2.12 && < 0.3,
                        uniplate >= 1.6 && < 1.7,
                        text >= 0.11 && < 1.3,
                        base64-bytestring >= 1 && < 1.1,
