--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,13 @@ env:
     - GHCVER=8.0.2 CABALVER=1.24
     - GHCVER=8.2.2 CABALVER=2.0
     - GHCVER=8.4.2 CABALVER=2.2
+    - GHCVER=8.6.5 CABALVER=2.4
+    - GHCVER=8.8.1 CABALVER=3.0
     - GHCVER=head CABALVER=head
   global:
     - UBUNTU_PKGS="libgmp-dev libgtk2.0-dev libcairo2-dev libpango1.0-dev"
     - EXTRA_DEPS_PRE="gtk2hs-buildtools"
-    - HEAD_DEPS="active dual-tree monoid-extras diagrams-core diagrams-solve diagrams-lib  statestack diagrams-cairo diagrams-svg diagrams-postscript diagrams-rasterific diagrams-builder"
+    - HEAD_DEPS="dual-tree monoid-extras diagrams-core diagrams-solve diagrams-lib  statestack diagrams-cairo diagrams-svg diagrams-postscript diagrams-rasterific diagrams-builder"
 
 matrix:
   allow_failures:
