--- a/diagrams-haddock.cabal
+++ b/diagrams-haddock.cabal
@@ -26,7 +26,7 @@ build-type:          Simple
 cabal-version:       1.18
 extra-source-files:  README.md, CHANGES.md, diagrams/*.svg
 extra-doc-files:     diagrams/*.svg
-tested-with:         GHC == 7.10.2, GHC == 8.0.1
+tested-with:         GHC ==8.2.2 || ==8.4.3 || ==8.6.5 || ==8.8.1
 
 Source-repository head
   type: git
