--- a/diagrams-haddock.cabal
+++ b/diagrams-haddock.cabal
@@ -26,7 +26,7 @@ build-type:          Simple
 cabal-version:       1.18
 extra-source-files:  README.md, CHANGES.md, diagrams/*.svg
 extra-doc-files:     diagrams/*.svg
-tested-with:         GHC ==8.2.2 || ==8.4.3 || ==8.6.5 || ==8.8.1
+tested-with:         GHC ==8.4.4 || ==8.6.5 || ==8.8.4 || ==8.10.4 || ==9.0.1
 
 Source-repository head
   type: git
@@ -35,28 +35,28 @@ Source-repository head
 library
   exposed-modules:     Diagrams.Haddock
   other-modules:       Paths_diagrams_haddock
-  build-depends:       base >= 4.4 && < 4.14,
+  build-depends:       base >= 4.4 && < 4.16,
                        filepath,
                        directory,
                        mtl >= 2.0 && < 2.3,
                        containers >= 0.4 && < 0.7,
                        split >= 0.2 && < 0.3,
-                       bytestring >= 0.9 && < 0.11,
-                       strict >= 0.3 && < 0.4,
+                       bytestring >= 0.9 && < 0.12,
+                       strict >= 0.3 && < 0.5,
                        parsec >= 3,
                        haskell-src-exts >= 1.18 && < 1.24,
                        svg-builder >= 0.1 && < 0.2,
                        diagrams-builder >= 0.5 && < 0.9,
                        diagrams-lib >= 1.4 && < 1.5,
                        diagrams-svg >= 1.4 && < 1.5,
-                       lens >= 3.8 && < 4.20,
+                       lens >= 3.8 && < 5.1,
                        linear >= 1.10 && < 1.22,
                        cpphs >= 1.15,
                        unliftio >= 0.2.12 && < 0.3,
                        uniplate >= 1.6 && < 1.7,
                        text >= 0.11 && < 1.3,
-                       base64-bytestring >= 1 && < 1.1,
-                       ansi-terminal >= 0.5 && < 0.11
+                       base64-bytestring >= 1 && < 1.3,
+                       ansi-terminal >= 0.5 && < 0.12
   hs-source-dirs:      src
   other-extensions:    TemplateHaskell
   default-language:    Haskell2010
@@ -69,7 +69,7 @@ Executable diagrams-haddock
                        filepath,
                        diagrams-haddock,
                        cmdargs >= 0.8 && < 0.11,
-                       Cabal >= 1.14 && < 3.1,
+                       Cabal >= 1.14 && < 3.5,
                        cpphs >= 1.15
   hs-source-dirs:      tools
   default-language:    Haskell2010
@@ -79,11 +79,11 @@ Test-suite diagrams-haddock-tests
   main-is:             Tests.hs
   build-depends:       base,
                        containers >= 0.4 && < 0.7,
-                       QuickCheck >= 2.4 && < 2.14,
-                       tasty >= 0.8 && < 1.3,
+                       QuickCheck >= 2.4 && < 2.15,
+                       tasty >= 0.8 && < 1.5,
                        tasty-quickcheck >= 0.8 && < 0.11,
                        parsec >= 3,
-                       lens >= 3.8 && < 4.20,
+                       lens >= 3.8 && < 5.1,
                        haskell-src-exts >= 1.18 && < 1.24,
                        diagrams-haddock
   hs-source-dirs:      test
