--- a/diagrams-haddock.cabal
+++ b/diagrams-haddock.cabal
@@ -24,8 +24,8 @@ bug-reports:         https://github.com/diagrams/diagrams-haddock/issues
 category:            Graphics
 build-type:          Simple
 cabal-version:       1.18
-extra-source-files:  README.md, CHANGES.md, diagrams/*.svg
-extra-doc-files:     diagrams/*.svg
+extra-source-files:  README.md, diagrams/*.svg
+extra-doc-files:     diagrams/*.svg, CHANGES.md
 tested-with:         GHC ==8.4.4 || ==8.6.5 || ==8.8.4 || ==8.10.7 || ==9.0.2 || ==9.2.7 || ==9.4.5 || ==9.6.1
 
 Source-repository head
